[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = "Downloads YouTube videos"
authors = ["Krishnan Shankar <krishnans2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytube = "^15.0.0"
moviepy = "^1.0.3"
mutagen = "^1.47.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
